--- a/demo/package.json
+++ b/demo/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
+    "axios": "^1.12.2",
     "expo": "~54.0.9",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
