--- a/demo/package.json
+++ b/demo/package.json
@@ -14,6 +14,7 @@
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~54.0.12",
+    "expo-av": "^16.0.7",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-linking": "~8.0.8",
